Use 'Block Number' instead of 'Block' or 'Block Height'

--- a/apps/block_scout_web/priv/gettext/default.pot
+++ b/apps/block_scout_web/priv/gettext/default.pot
@@ -373,7 +373,7 @@ msgstr ""
 
 #, elixir-format
 #: lib/block_scout_web/templates/block/overview.html.eex:53
-msgid "Block Height"
+msgid "Block Number"
 msgstr ""
 
 #, elixir-format
