--- a/apps/block_scout_web/priv/gettext/en/LC_MESSAGES/default.po
+++ b/apps/block_scout_web/priv/gettext/en/LC_MESSAGES/default.po
@@ -1383,7 +1383,7 @@ msgstr ""
 #: lib/block_scout_web/templates/block/overview.html.eex:98
 #: lib/block_scout_web/templates/chain/_block.html.eex:16
 #, elixir-autogen, elixir-format
-msgid "Miner"
+msgid "Validator"
 msgstr ""
 
 #: lib/block_scout_web/views/block_view.ex:61
@@ -1757,7 +1757,7 @@ msgstr ""
 
 #: lib/block_scout_web/templates/layout/_search.html.eex:3
 #, elixir-autogen, elixir-format
-msgid "Search by address, token symbol name, transaction hash, or block number"
+msgid "Search by address, token symbol name, transaction hash, block number or block hash"
 msgstr ""
 
 #: lib/block_scout_web/templates/address_token_balance/_token_balances.html.eex:47
